# pmf-kit

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION_REPORT.md  README.md  RELEASE_EXECUTION_SUMMARY.md  pyproject.toml  spec-driven.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
.pmf/memory/: constitution.md
.pmf/scripts/: build-templates.sh  validate-templates.sh
.pmf/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md  vscode-settings.json
docs/: installation.md  local-development.md  maintainer-guide.md  quickstart.md  templates.md  upgrade.md
examples/: eval_constitution.md  eval_plan.md  eval_spec.md  eval_tasks.md
examples/refs/: competitors.md
memory/: constitution.md
refs/: 0_overview.md  1_principles_for_constitution.md  2_ define_for_specify.md  2_define_for_specify.md  3_project_mangement_for_plan.md  4_pm_tasking_for_tasks.md  6_claude_code.md  7_claude_code_opt.md  7_optimization.md  agentii-kit-constitution.md  instructions.md  releases.md
refs/5_more/: 5_more_references.md  pmfkit_optimize_code_examples.md  pmfkit_optimize_guide.md  pmfkit_optimize_quick_ref.md
scripts/: build-templates.sh  validate-templates.sh
scripts/bash/: check-prerequisites.sh
scripts/powershell/: check-prerequisites.ps1
specs/001-pmf-kit-variant/: IMPLEMENTATION-STATUS.md  plan.md  spec.md  tasks.md
specs/002-automated-template-releases/: data-model.md  plan.md  spec.md  (+2 more)
templates/: plan-template.md  vscode-settings.json
(+71 files in other folders)
