[project]
name = "pmf-cli"
version = "0.0.22"
description = "PMF CLI, part of PMF-Kit. A tool to bootstrap your projects for PMF (Product-Market-Fit) discovery and validation."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
pmf = "pmf_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pmf_cli"]

